2002-12-04  James Willcox  <jwillcox@gnome.org>

	* components/emblem/nautilus-emblem-view.c:
	(nautilus_emblem_view_drag_received_cb):

	Fixed a silly double negation in an error string.  (Fixes #100376)

2002-12-04  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-tree-view-drag-dest.c:
	(tree_view_weak_notify), (nautilus_tree_view_drag_dest_dispose),
	(nautilus_tree_view_drag_dest_class_init),
	(nautilus_tree_view_drag_dest_new): Remove the scroll timeout
	when either the TreeView or the DragDest is destroyed. 

2002-12-04  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-properties-window.c (create_properties_window):
	Don't use GTK_WIN_POS_MOUSE.

2002-12-03  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-file.c (update_info_internal): 
	Removed unused code that should have been removed in the last 
	commit.

2002-12-03  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-file.c: (rename_callback),
	(update_info_internal): Moved the display name invalidation 
	from update_info_internal to rename_callback.

2002-12-03  Alexander Larsson  <alexl@redhat.com>

	* nautilus.desktop.in:
	* src/nautilus-server-connect.desktop.in:
	Add X-GNOME-Bugzilla lines.
	Patch from Fernando Herrera <fherrera@onirica.com>

2002-12-02  Alexander Larsson  <>

	* libnautilus-private/nautilus-thumbnails.c (thumbnail_thread_starter_cb):
	Allocate 128K thread stack. Patch from marcus@freebsd.org. (#99917)

2002-11-28  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/apps_nautilus_preferences.schemas:
	Make treeview show_only_directories default to TRUE.
	Patch from MArk Finlay <sisob@eircom.net>

	* src/file-manager/fm-properties-window.[ch]:
	Make window not dialog,
	patch from David Emory Watson <dwatson@cs.ucr.edu>
	Center window on mouse at popup.

2002-11-28  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/nautilus-directory-view-ui.xml: 
	Add gtk-properties stock pixmap to menus.
	